--- a/src/by/it/loktev/project/webapp/WEB-INF/web.xml
+++ b/src/by/it/loktev/project/webapp/WEB-INF/web.xml
@@ -10,24 +10,13 @@
     и имя сервлета в них было одинаковым!!! Здесь это имя HelloWeb
     -->
     <servlet>
-        <servlet-name>HelloWeb</servlet-name>
-        <servlet-class>by.it.akhmelev.jd03_04.java.HelloWorld</servlet-class>
+        <servlet-name>FrontController</servlet-name>
+        <servlet-class>by.it.loktev.project.java.controller.FrontController</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>HelloWeb</servlet-name>
-        <url-pattern>/hello</url-pattern>
-    </servlet-mapping>
-
-    <!--
-    Подключим точно так же второй сервлета-контроллер с именем FrontControllerServlet
-    -->
-    <servlet>
-        <servlet-name>FrontControllerServlet</servlet-name>
-        <servlet-class>by.it.akhmelev.jd03_04.java.sample_controller.FrontController</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>FrontControllerServlet</servlet-name>
+        <servlet-name>FrontController</servlet-name>
         <url-pattern>/do</url-pattern>
     </servlet-mapping>
+
 
 </web-app>
