--- a/src/by/it/vedom/project/webapp/WEB-INF/web.xml
+++ b/src/by/it/vedom/project/webapp/WEB-INF/web.xml
@@ -18,4 +18,17 @@
         <url-pattern>/do</url-pattern>
     </servlet-mapping>
 
+       <filter>
+           <filter-name>EncodingUTF8</filter-name>
+           <filter-class>by.it.vedom.project.java.filter.EncodingUTF8</filter-class>
+           <init-param>
+               <param-name>encoding</param-name>
+               <param-value>UTF-8</param-value>
+           </init-param>
+       </filter>
+        <filter-mapping>
+            <filter-name>EncodingUTF8</filter-name>
+            <url-pattern>/*</url-pattern>
+        </filter-mapping>
+
 </web-app>
