--- a/src/by/it/akhmelev/project/webapp/WEB-INF/web.xml
+++ b/src/by/it/akhmelev/project/webapp/WEB-INF/web.xml
@@ -19,5 +19,19 @@
         <servlet-name>FrontController</servlet-name>
         <url-pattern>/do</url-pattern>
     </servlet-mapping>
+    
+    <filter>
+        <filter-name>EncogingUTF8</filter-name>
+        <filter-class>by.it.akhmelev.project.java.filters.EncodingUTF8</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>EncogingUTF8</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
 </web-app>
