--- a/src/by/it/loktev/project/webapp/WEB-INF/web.xml
+++ b/src/by/it/loktev/project/webapp/WEB-INF/web.xml
@@ -32,4 +32,14 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <filter>
+        <filter-name>AuthorizationToCookies</filter-name>
+        <filter-class>by.it.loktev.project.java.filters.AuthorizationToCookies</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>AuthorizationToCookies</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
 </web-app>
