--- a/src/by/it/prigozhanov/project/webapp/WEB-INF/web.xml
+++ b/src/by/it/prigozhanov/project/webapp/WEB-INF/web.xml
@@ -18,6 +18,19 @@
         <url-pattern>/do</url-pattern>
     </servlet-mapping>
 
+    <filter>
+        <filter-name>EncodingUTF8</filter-name>
+        <filter-class>by.it.prigozhanov.project.java.filter.EncodingUTF8</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF8</param-value>
+        </init-param>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>EncodingUTF8</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
     <!--
     Подключим точно так же второй сервлета-контроллер с именем FrontControllerServlet
     -->
