--- a/src/by/it/tereshko/project/webapp/WEB-INF/web.xml
+++ b/src/by/it/tereshko/project/webapp/WEB-INF/web.xml
@@ -4,11 +4,13 @@
          version="3.0"
          metadata-complete="true">
     <display-name>Сервлет Controller</display-name>
+
     <!--
     Для любого сервлета нужно определить два тега servlet и servlet-mapping.
     Важно чтобы внутри каждого из этих тегов были теги servlet-name
-    и имя сервлета в них было одинаковым!!! Здесь это имя HelloWeb
+    и имя сервлета в них было одинаковым!!! Здесь это имя HelloWorld
     -->
+
     <servlet>
         <servlet-name>FrontController</servlet-name>
         <servlet-class>by.it.tereshko.project.java.controller.FrontController</servlet-class>
@@ -18,8 +20,18 @@
         <url-pattern>/do</url-pattern>
     </servlet-mapping>
 
-    <!--
-    Подключим точно так же второй сервлета-контроллер с именем FrontControllerServlet
-    -->
+    <filter>
+        <filter-name>EncogingUTF8</filter-name>
+        <filter-class>by.it.tereshko.project.java.filters.EncodingUTF8</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>EncogingUTF8</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
 </web-app>
