--- a/src/by/it/akhmelev/project/webapp/WEB-INF/web.xml
+++ b/src/by/it/akhmelev/project/webapp/WEB-INF/web.xml
@@ -18,6 +18,7 @@
     <servlet-mapping>
         <servlet-name>FrontController</servlet-name>
         <url-pattern>/do</url-pattern>
+        <url-pattern></url-pattern>
     </servlet-mapping>
     
     <filter>
