--- a/src/by/it/korzun/project/webapp/WEB-INF/web.xml
+++ b/src/by/it/korzun/project/webapp/WEB-INF/web.xml
@@ -12,6 +12,7 @@
     <servlet-mapping>
         <servlet-name>FrontController</servlet-name>
         <url-pattern>/do</url-pattern>
+        <url-pattern></url-pattern>
     </servlet-mapping>
 
     <filter>
