--- a/src/by/it/psmishenko/project/webapp/WEB-INF/web.xml
+++ b/src/by/it/psmishenko/project/webapp/WEB-INF/web.xml
@@ -10,11 +10,11 @@
     и имя сервлета в них было одинаковым!!! Здесь это имя HelloWorld
     -->
     <servlet>
-        <servlet-name>HelloWorld</servlet-name>
+        <servlet-name>FrontController</servlet-name>
         <servlet-class>by.it.psmishenko.project.java.controller.FrontController</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>HelloWorld</servlet-name>
+        <servlet-name>FrontController</servlet-name>
         <url-pattern>/do</url-pattern>
         <url-pattern></url-pattern>
     </servlet-mapping>
