--- a/src/by/it/tereshko/project/webapp/WEB-INF/web.xml
+++ b/src/by/it/tereshko/project/webapp/WEB-INF/web.xml
@@ -4,7 +4,6 @@
          version="3.0"
          metadata-complete="true">
     <display-name>Сервлет Controller</display-name>
-
     <!--
     Для любого сервлета нужно определить два тега servlet и servlet-mapping.
     Важно чтобы внутри каждого из этих тегов были теги servlet-name
@@ -18,10 +17,11 @@
     <servlet-mapping>
         <servlet-name>FrontController</servlet-name>
         <url-pattern>/do</url-pattern>
+        <url-pattern></url-pattern>
     </servlet-mapping>
 
     <filter>
-        <filter-name>EncogingUTF8</filter-name>
+        <filter-name>EncodingUTF8</filter-name>
         <filter-class>by.it.tereshko.project.java.filters.EncodingUTF8</filter-class>
         <init-param>
             <param-name>encoding</param-name>
@@ -30,7 +30,7 @@
     </filter>
 
     <filter-mapping>
-        <filter-name>EncogingUTF8</filter-name>
+        <filter-name>EncodingUTF8</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
