--- a/src/by/it/akhmelev/project/webapp/WEB-INF/web.xml
+++ b/src/by/it/akhmelev/project/webapp/WEB-INF/web.xml
@@ -35,4 +35,12 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <description>MySQL my_sql_akhmelev</description>
+    <resource-ref>
+        <description>my_sql_akhmelev</description>
+        <res-ref-name>jdbc/my_sql_akhmelev</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
+
 </web-app>
