--- a/src/by/it/akhmelev/project/webapp/WEB-INF/web.xml
+++ b/src/by/it/akhmelev/project/webapp/WEB-INF/web.xml
@@ -43,4 +43,9 @@
         <res-auth>Container</res-auth>
     </resource-ref>
 
+    <listener>
+        <listener-class>by.it.akhmelev.project.java.filters.SessionAttributeListener</listener-class>
+    </listener>
+
+
 </web-app>
